# XML-File-Editor

./: CMakeLists.txt  DataStructureProjectPrettifyingTrial.cpp  Formating.cpp  Formating.h  Formatting.cpp  Formatting.h  LineNumberArea.cpp  LineNumberArea.h  Minify.h  Prettify.cpp  README.md  XML Editor.cpp  XmlFile2json.cpp  a.dot  decompressedfile.cpp  error_checking_window.cpp  error_handling.cpp  error_handling.h  errors_list.cpp  graph_vis.cpp  graph_vis.ui  images.qrc  json.cpp  json.h  json.ui  json_window.cpp  json_window.h  json_window.ui  main.cpp  network.cpp  network.h  oyt  prettify.cpp  prettify.h  qtextedithighlighter.cpp  qtextedithighlighter.h  sample.xml  sdaf45  ttttt  xml_application.cpp  (+7 more)
Error handling/: Error handling.sln
Error handling/Error handling/: Error handling.vcxproj  error_handling.cpp  error_handling.h  mian.cpp
Error-handling/: error_handling.cpp
Error-handling/Error-handling/: Error-handling.cpp  Error-handling.sln  Error-handling.vcxproj  error_handling.cpp  error_handling.h
Error-handling/Error-handling/Error-handling/: Error-handling.vcxproj.filters
Error-handling/Error-handling/x64/Debug/: Error-handling.exe.recipe  Error-handling.ilk  vc143.idb
Formatting/: Formatting.cpp  Formatting.h
GUI/XML_project/: CMakeLists.txt  XmlFile2Json.cpp  XmlFile2Json.h  decompressedfile.cpp  decompressedfile.h  decompressedfile.ui  error_checking_window.h  error_checking_window.ui  errors_list.cpp  errors_list.h  errors_list.ui  graph_vis.cpp  graph_vis.h  json_window2.cpp  json_window2.h  json_window2.ui  main.cpp  xml_details.cpp  xml_details.h  xml_project.cpp  xml_project.h
GUI/build-XML_project-Desktop_x86_windows_msvc2022_pe_64bit-Release/: CMakeCache.txt  Sample.txt  build.ninja  cmake_install.cmake  graph.dot
GUI/build-XML_project-Desktop_x86_windows_msvc2022_pe_64bit-Release/XML_project_autogen/: deps  mocs_compilation.cpp
GUI/build-XML_project-Desktop_x86_windows_msvc2022_pe_64bit-Release/XML_project_autogen/EWIEGA46WW/: moc_decompressedfile.cpp  moc_decompressedfile.cpp.d  moc_error_checking_window.cpp  moc_error_checking_window.cpp.d  moc_errors_list.cpp  moc_errors_list.cpp.d  moc_graph_vis.cpp  moc_graph_vis.cpp.d  moc_json_window2.cpp  moc_json_window2.cpp.d  moc_xml_details.cpp  moc_xml_details.cpp.d  moc_xml_project.cpp  moc_xml_project.cpp.d  qrc_images.cpp
GUI/build-XML_project-Desktop_x86_windows_msvc2022_pe_64bit-Release/XML_project_autogen/include/: ui_decompressedfile.h  ui_error_checking_window.h  ui_errors_list.h  ui_graph_vis.h  ui_json_window2.h  ui_xml_details.h  ui_xml_project.h
NETWORK/: network.h
NETWORK/network-analysis/: network-analysis.sln
NETWORK/network-analysis/network-analysis/: network-analysis.vcxproj  network.cpp
json/: XmlFile2json.h
network-analysis/network-analysis/: network-analysis.cpp  network-analysis.vcxproj.filters  network.cpp  network.h
prettify/: prettify.h
(+25 files in other folders)
